--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -5,7 +5,7 @@
         <title><f:render section="Title" /></title>
         <f:base />
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="{f:uri.resource(path: 'CSS/main.css')}" />
+        <link rel="stylesheet" href="{f:uri.resource(path: 'Styles/main.css')}" />
         <!-- Font Awesome -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <!-- TWBS: minified CSS -->
@@ -18,24 +18,28 @@
         <f:render section="HeaderJS" />
     </head>
     <body>
-        <f:security.ifAuthenticated>
-            <div id="user-panel">
-                <div id="user-panel-inner">
-                    <i class="fa fa-user fa-fw"></i> {user} &nbsp; &nbsp;
-                    <f:link.action action="logout" controller="Authentication" class="btn btn-danger">
-                        <i class="fa fa-sign-out fa-fw"></i> Logout
-                    </f:link.action>
+        <f:if condition="{hideUserPanel} == 0">
+            <f:security.ifAuthenticated>
+                <div id="user-panel">
+                    <div id="user-panel-inner">
+                        <i class="fa fa-user fa-fw"></i> {user} &nbsp; &nbsp;
+                        <f:link.action action="logout" controller="Authentication" class="btn btn-danger">
+                            <i class="fa fa-sign-out fa-fw"></i> Logout
+                        </f:link.action>
+                    </div>
                 </div>
-            </div>
-        </f:security.ifAuthenticated>
+            </f:security.ifAuthenticated>
+        </f:if>
         <f:render section="Content" />
-        <f:security.ifAuthenticated>
-            <script>function f(){var e=$(window).scrollTop(),d=1,g=$("#user-panel");if(e>d){g.addClass("sticky").siblings().first().css("padding-top",54)}else{g.removeClass("sticky").siblings().first().css("padding-top",0)}}$(function(){$(window).scroll(f);f()});</script>
-        </f:security.ifAuthenticated>
+        <f:if condition="{hideUserPanel} == 0">
+            <f:security.ifAuthenticated>
+                <script>function f(){var e=$(window).scrollTop(),d=1,g=$("#user-panel");if(e>d){g.addClass("sticky").siblings().first().css("padding-top",54)}else{g.removeClass("sticky").siblings().first().css("padding-top",0)}}$(function(){$(window).scroll(f);f()});</script>
+            </f:security.ifAuthenticated>
+        </f:if>
         <script>
             $(function() {
                 $('.flashmessages > div').each(function(e, f) {
-                    $(this).delay((e * 1000) + 5000).slideUp({duration: 250});
+                    $(this).delay((e * 500) + 5000).slideUp({duration: 250});
                 });
             });
         </script>
